--- a/css/style.css
+++ b/css/style.css
@@ -106,10 +106,10 @@ a.caption-login:hover {
 .app {
     margin: 20px auto;
     padding: 20px;
-    border: 2px solid #fff8dc;
+    border: 2px solid #afff85;
     border-radius: 10px;
     max-width: 50%;
-    background-color: #fff8dc; 
+    background-color: #a8ff90; 
     margin-bottom: 0; 
     padding-bottom: 0;    
 }
