--- a/css/style.css
+++ b/css/style.css
@@ -127,8 +127,11 @@ a.caption-login:hover {
 }
 
 .right-content {
-    width: 40%;
-    position: relative;
+    width: 90%;
+    transform: translateY(-20px);
+  
+    
+     
 }
 
 .qr-code {
@@ -137,8 +140,13 @@ a.caption-login:hover {
 }
 
 .phone img {
-    max-width: 100%;
-    height: auto;
+    border-radius: 10px;
+    
+    transform: translateX(55px); 
+    
+    width: 500px;
+    height: 300px;
+    
 }
 
 .curve {
@@ -147,7 +155,7 @@ a.caption-login:hover {
     right: 0;
     width: 100%;
     height: 100%;
-    background: #f0f8ff;
+   
     border-radius: 50%;
     z-index: -1;
 }
@@ -159,7 +167,14 @@ a.caption-login:hover {
 
 
 .texto h2{
-    font-family: Poppins,Helvetica Neue,Arial,sans-serif;
+    margin:15px 0 ;
+    font-family: 'Poppins', sans-serif;
+    
+}
+.texto p{
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    color: #333;
 }
 .card-img-top{
     height: 200px;
@@ -170,7 +185,7 @@ a.caption-login:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 40vh;
+    min-height: 55vh;
     margin: 0;
     background-color: #fafafa ;
 }
@@ -183,17 +198,23 @@ a.caption-login:hover {
     max-width: 300px;
 }
 .section img {
-    width: 320px;
+    width: 200px;
     height: auto;
     margin-bottom: 15px;
 }
 .section h3 {
-    font-size: 20px;
-    margin: 10px 0;
+    font-size: 23px;
+    margin: 15px 0;
     color: #333;
+    font-family: 'Poppins', sans-serif;
+
+
 }
 .section p {
-    color: #666;
+    color: black;
     font-size: 14px;
     line-height: 1.5;
+    font-family: 'Poppins', sans-serif;
+    
+
 }
